Reduce toolchain to Java 8 with help from Lombok.