@@ -2,11 +2,12 @@ package br.dev.pedrolamarao.gdb;
 
 import br.dev.pedrolamarao.gdb.mi.GdbMiMessage;
 import br.dev.pedrolamarao.gdb.mi.GdbMiType;
+import lombok.var;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -35,7 +36,7 @@ public class GdbInteroperabilityTest
     @Test
     public void breakWatch () throws Exception
     {
-        assumeTrue(Files.exists(Path.of(target)));
+        assumeTrue(Files.exists(Paths.get(target)));
 
         try (var gdb = Gdb.builder().command(path).start())
         {
@@ -47,17 +48,15 @@ public class GdbInteroperabilityTest
                 .get(1000, TimeUnit.MILLISECONDS);
             assertThat(response1.content().type(), equalTo("running"));
 
+            final CompletableFuture<GdbMiMessage> future = new CompletableFuture<>();
             final var handler = new GdbHandler() {
-                final CompletableFuture<GdbMiMessage> future = new CompletableFuture<>();
-                @Override public void handle (Gdb gdb, GdbMiMessage event)
-                {
+                @Override public void handle (Gdb gdb, GdbMiMessage event) {
                     if (event.type() != GdbMiType.Execute) return;
                     final var record = (GdbMiMessage.RecordMessage) event;
                     if (! record.content().type().contentEquals("stopped")) return;
                     future.complete(event);
                 }
             };
-
             gdb.handle(handler);
 
             final var response2 = gdb.breakWatch("argc").read().go()
@@ -68,14 +67,14 @@ public class GdbInteroperabilityTest
                 .get(1000, TimeUnit.MILLISECONDS);
             assertThat(response3.content().type(), equalTo("running"));
 
-            handler.future.get(1000, TimeUnit.MILLISECONDS);
+            future.get(1000, TimeUnit.MILLISECONDS);
         }
     }
 
     @Test
     public void execContinue () throws Exception
     {
-        assumeTrue(Files.exists(Path.of(target)));
+        assumeTrue(Files.exists(Paths.get(target)));
 
         try (var gdb = Gdb.builder().command(path).start())
         {
@@ -96,7 +95,7 @@ public class GdbInteroperabilityTest
     @Test
     public void execRun () throws Exception
     {
-        assumeTrue(Files.exists(Path.of(target)));
+        assumeTrue(Files.exists(Paths.get(target)));
 
         try (var gdb = Gdb.builder().command(path).start())
         {
@@ -146,28 +145,25 @@ public class GdbInteroperabilityTest
     @Test
     public void smoke () throws Exception
     {
-        final var handler0 = new GdbHandler()
-        {
-            public final CompletableFuture<GdbMiMessage> future = new CompletableFuture<>();
-
-            @Override public void handle (Gdb gdb, GdbMiMessage message)
-            {
+        final CompletableFuture<GdbMiMessage> future = new CompletableFuture<>();
+        final var handler = new GdbHandler() {
+            @Override public void handle (Gdb gdb, GdbMiMessage message) {
                 System.err.println(message);
                 if (message.type() == GdbMiType.Prompt)
                     future.complete(message);
             }
         };
 
-        try (var ignored = Gdb.builder().command(path).handler(handler0).start())
+        try (var ignored = Gdb.builder().command(path).handler(handler).start())
         {
-            handler0.future.get(1000, TimeUnit.MILLISECONDS);
+            future.get(1000, TimeUnit.MILLISECONDS);
         }
     }
 
     @Test
     public void targetSelect () throws Exception
     {
-        assumeTrue(Files.exists(Path.of(target)));
+        assumeTrue(Files.exists(Paths.get(target)));
 
         try (var gdb = Gdb.builder().command(path).start())
         {
